# campusflow

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/app/models/: __init__.py  assignment.py  course.py  exam.py  schedule.py
apps/api/app/routers/: __init__.py  assignments.py  courses.py  exams.py  schedule.py
apps/api/app/schemas/: assignment.py  course.py  exam.py  schedule.py
apps/api/app/services/: __init__.py  assignments.py  courses.py  exams.py  schedule.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260720_01_create_courses.py  20260720_02_create_schedule_entries.py  20260720_03_create_assignments.py  20260720_04_create_exams.py
apps/api/tests/: conftest.py  test_assignments.py  test_courses.py  test_exams.py  test_health.py  test_migrations.py  test_schedule.py
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  i18n.ts  index.css
apps/web/src/api/: assignments.ts  courses.ts  exams.ts  schedule.ts
apps/web/src/components/: AppLayout.tsx  AssignmentFormDialog.tsx  CourseFormDialog.tsx  DeleteAssignmentDialog.tsx  DeleteCourseDialog.tsx  ScheduleFormDialog.tsx
apps/web/src/pages/: AssignmentsPage.tsx  CoursesPage.tsx  DashboardPage.tsx  ExamsPage.tsx  SchedulePage.tsx
apps/web/src/types/: assignment.ts  course.ts  exam.ts  (+1 more)
docs/: roadmap.md
